--- a/app/src/main/res/layout/activity_user_set_personal_info.xml
+++ b/app/src/main/res/layout/activity_user_set_personal_info.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.UserProfileFragment">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".UserProfileActivity.UserSetPersonalInfo">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -19,16 +17,8 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="@string/UserProfile"
+        app:title="@string/SetPersonalInformation"
         app:titleMarginStart="30dp"
         app:titleTextColor="#FFF" />
-
-    <ListView
-        android:id="@+id/userProfileListView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
