--- a/app/src/main/res/layout/activity_user_personal_info.xml
+++ b/app/src/main/res/layout/activity_user_personal_info.xml
@@ -6,21 +6,202 @@
     android:layout_height="match_parent"
     tools:context=".UserProfileActivity.UserPersonalInfo">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="412dp"
-        android:layout_height="wrap_content"
-        android:background="#3F51B5"
-        android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        app:contentInsetStartWithNavigation="72dp"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_back"
-        app:title="@string/SetPersonalInformation"
-        app:titleMarginStart="30dp"
-        app:titleTextColor="#FFF" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="412dp"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?attr/actionBarTheme"
+                app:contentInsetStartWithNavigation="72dp"
+                app:navigationIcon="@drawable/ic_back"
+                app:title="@string/SetPersonalInformation"
+                app:titleMarginStart="30dp"
+                app:titleTextColor="#FFF" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_UserName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:textColorHint="#FFFFFF"
+                app:helperTextTextColor="@color/white"
+                app:boxBackgroundMode="filled"
+                app:helperText="@string/user_name"
+                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+                <TextView
+                    android:id="@+id/tvUserName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#C1C4C6"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_ICNumber"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:textColorHint="#FFFFFF"
+                app:helperTextTextColor="@color/white"
+                app:boxBackgroundMode="filled"
+                app:helperText="@string/user_icnumber"
+                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+                <TextView
+                    android:id="@+id/tvICNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#C1C4C6"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_Gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:textColorHint="#FFFFFF"
+                app:helperTextTextColor="@color/white"
+                app:boxBackgroundMode="filled"
+                app:helperText="@string/user_gender"
+                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+                <TextView
+                    android:id="@+id/tvGender"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#C1C4C6"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_Address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:textColorHint="#FFFFFF"
+                app:helperTextTextColor="@color/white"
+                app:boxBackgroundMode="filled"
+                app:helperText="@string/user_address"
+                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+                <TextView
+                    android:id="@+id/tvAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#C1C4C6"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_Birthday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:textColorHint="#FFFFFF"
+                app:helperTextTextColor="@color/white"
+                app:boxBackgroundMode="filled"
+                app:helperText="@string/user_birthday"
+                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+                <TextView
+                    android:id="@+id/tvBirthday"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#C1C4C6"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:textSize="16sp" />
+
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layout_Status"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#3F51B5"
+                android:textColorHint="#FFFFFF"
+                app:helperTextTextColor="@color/white"
+                app:boxBackgroundMode="filled"
+                app:helperText="@string/user_status"
+                app:helperTextTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+                <TextView
+                    android:id="@+id/tvStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#C1C4C6"
+                    android:gravity="center"
+                    android:padding="10dp"
+                    android:textColor="#000000"
+                    android:textColorHint="#808080"
+                    android:textSize="16sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </LinearLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
