jordan and tiger commit

--- a/app/src/main/res/layout/activity_review_singel_approval_application.xml
+++ b/app/src/main/res/layout/activity_review_singel_approval_application.xml
@@ -133,7 +133,7 @@
             app:helperTextTextColor="@color/white">
 
             <TextView
-                android:id="@+id/tvAddress"
+                android:id="@+id/tvDonerRequestAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#C1C4C6"
