--- a/app/src/main/res/layout/approval_recyclerview_item.xml
+++ b/app/src/main/res/layout/approval_recyclerview_item.xml
@@ -52,7 +52,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/tvName"
+                android:id="@+id/tvDonerRequestName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
