test pull JunYi

--- a/app/src/main/res/layout/fragment_searching.xml
+++ b/app/src/main/res/layout/fragment_searching.xml
@@ -6,19 +6,46 @@
     android:layout_height="match_parent"
     tools:context=".fragment.SearchingFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/tv_searchingpage"
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="412dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="141dp"
-        android:layout_marginTop="356dp"
-        android:layout_marginEnd="140dp"
-        android:layout_marginBottom="356dp"
-        android:text="Here is the Searching Page"
+        android:background="#3F51B5"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:title="Searching Food"
+        app:titleMarginStart="30dp"
+        app:titleTextColor="#FFF" />
+
+    <Button
+        android:id="@+id/btnOrdered"
+        android:layout_width="146dp"
+        android:layout_height="81dp"
+        android:text="User Ordered"
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.864"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnOrder"
+        android:layout_width="142dp"
+        android:layout_height="82dp"
+        android:text="order food"
+        android:textSize="19sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.499" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
