--- a/app/src/main/res/layout/activity_list_cart.xml
+++ b/app/src/main/res/layout/activity_list_cart.xml
@@ -32,7 +32,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="12dp"
             android:text="Mode      :"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <RadioGroup
@@ -45,20 +45,22 @@
                 android:id="@+id/rbPickup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Pick up" />
+                android:text="Pick up"
+                android:textSize="20sp" />
 
             <RadioButton
                 android:id="@+id/rbDelivery"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Delivery" />
+                android:text="Delivery"
+                android:textSize="20sp" />
         </RadioGroup>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <TextView
@@ -67,8 +69,9 @@
             android:layout_height="wrap_content"
             android:text="Selected Item"
             android:textAlignment="center"
+            android:textAllCaps="false"
             android:textColor="#000000"
-            android:textSize="16sp"
+            android:textSize="20sp"
             android:textStyle="bold|italic" />
 
         <LinearLayout
@@ -84,7 +87,7 @@
                 android:text="Name"
                 android:textAlignment="center"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -95,7 +98,7 @@
                 android:text="Quantity"
                 android:textAlignment="center"
                 android:textColor="#000000"
-                android:textSize="16sp"
+                android:textSize="20sp"
                 android:textStyle="bold" />
 
         </LinearLayout>
@@ -106,8 +109,8 @@
             android:layout_weight="1">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ListView
@@ -126,9 +129,11 @@
 
         <Button
             android:id="@+id/btnConfirmOrder"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="confirm order" />
+            android:insetLeft="100dp"
+            android:text=" confirm order"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
