--- a/app/src/main/res/layout/food_rv_item.xml
+++ b/app/src/main/res/layout/food_rv_item.xml
@@ -1,126 +1,121 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    app:cardBackgroundColor="#673AB7"
+    app:cardCornerRadius="18dp"
+    app:cardElevation="18dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="12dp"
-        app:cardBackgroundColor="#009688"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
+        android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
+
+            <TextView
+                android:id="@+id/tvname2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text=" Name    :"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
-                <TextView
-                    android:id="@+id/tvname2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=" Name    :"
-                    android:textSize="14sp" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
-
-                <TextView
-                    android:id="@+id/tvtype2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text=" Type      :"
-                    android:textSize="14sp" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
-
-                <TextView
-                    android:id="@+id/tvquantity2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Quantity :"
-                    android:textSize="14sp" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="256dp"
+            <TextView
+                android:id="@+id/tvtype2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text=" Type      :"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
-                <TextView
-                    android:id="@+id/tvFoodName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+            <TextView
+                android:id="@+id/tvquantity2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Quantity :"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/tvfoodType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+        <LinearLayout
+            android:layout_width="199dp"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
-                <TextView
-                    android:id="@+id/tvFoodQuantity"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView" />
+            <TextView
+                android:id="@+id/tvFoodName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/tvfoodType"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:orientation="horizontal">
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_margin="20dp"
-                    android:layout_weight="1"
-                    app:srcCompat="@android:drawable/ic_menu_add" />
+            <TextView
+                android:id="@+id/tvFoodQuantity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-            </LinearLayout>
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_margin="20dp"
+            android:layout_weight="1"
+            app:srcCompat="@android:drawable/ic_menu_add" />
 
-</LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
+
