--- a/app/src/main/res/layout/food_station_rv_item.xml
+++ b/app/src/main/res/layout/food_station_rv_item.xml
@@ -1,80 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    app:cardBackgroundColor="#673AB7"
+    app:cardCornerRadius="18dp"
+    app:cardElevation="18dp">
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:cardBackgroundColor="#009688"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
+        android:layout_marginVertical="12dp"
+        android:layout_marginStart="16dp"
+        android:orientation="horizontal">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvname2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  Station Name :"
+                android:textColor="#F8F5F5"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
+
+            <TextView
+                android:id="@+id/tvAddress2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="  Address           :"
+                android:textColor="#FFFCFC"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:typeface="normal" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginVertical="12dp"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_vertical"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/tvname2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="  Station Name :"
-                    android:textColor="#F8F5F5"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
-
-                <TextView
-                    android:id="@+id/tvAddress2"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="  Address           :"
-                    android:textColor="#FFFCFC"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    android:typeface="normal" />
-
-            </LinearLayout>
-
-            <LinearLayout
+            <TextView
+                android:id="@+id/tvStationName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
+                android:text="TextView"
+                android:textColor="#FBFBFB"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/tvStationName"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView"
-                    android:textColor="#FBFBFB" />
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="12dp" />
 
-                <Space
-                    android:layout_width="match_parent"
-                    android:layout_height="12dp" />
+            <TextView
+                android:id="@+id/tvStationAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp" />
 
-                <TextView
-                    android:id="@+id/tvStationAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="TextView"
-                    android:textColor="#FFFFFF" />
-            </LinearLayout>
         </LinearLayout>
 
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+
+</androidx.cardview.widget.CardView>
