30/9/2022 change layout & confirm order button function

--- a/app/src/main/res/layout/fragment_searching.xml
+++ b/app/src/main/res/layout/fragment_searching.xml
@@ -25,27 +25,27 @@
 
     <Button
         android:id="@+id/btnOrdered"
-        android:layout_width="146dp"
-        android:layout_height="81dp"
+        android:layout_width="207dp"
+        android:layout_height="128dp"
         android:text="User Ordered"
-        android:textSize="19sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.864"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.587" />
 
     <Button
         android:id="@+id/btnOrder"
-        android:layout_width="142dp"
-        android:layout_height="82dp"
+        android:layout_width="207dp"
+        android:layout_height="128dp"
         android:text="order food"
-        android:textSize="19sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.118"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintVertical_bias="0.283" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
